Project structure refactor Minor changes on main.js

--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
 <script src="node_modules/@angular/router/angular1/angular_1_router.js"></script>
 
 <script src="js/app.module.js"></script>
-<script src="js/components/app/app.component.js"></script>
-<script src="js/components/welcome/welcome.component.js"></script>
-<script src="js/components/scriptupload/script-upload.component.js"></script>
+<script src="components/app/app.component.js"></script>
+<script src="components/welcome/welcome.component.js"></script>
+<script src="components/scriptupload/script-upload.component.js"></script>
 </body>
 </html>
