Handled script execution from get query params Minor changes

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="user-scalable=no">
     <title>Multilanguage Project</title>
+
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body data-ng-app="appModule">
 
