Implemented script upload Implemented scripts view Script upload view

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 </head>
 <body data-ng-app="appModule">
 
-<app></app>
+<app>Loading...</app>
 
 <!-- JQUERY -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -23,9 +23,11 @@
 <script src="node_modules/angular/angular.min.js"></script>
 <script src="node_modules/@angular/router/angular1/angular_1_router.js"></script>
 
+<script src="js/models.js"></script>
 <script src="js/app.module.js"></script>
 <script src="components/app/app.component.js"></script>
 <script src="components/welcome/welcome.component.js"></script>
 <script src="components/scriptupload/script-upload.component.js"></script>
+<script src="components/scripts/scripts.component.js"></script>
 </body>
 </html>
